<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="session_description_favorite_image" translatable="false">favorite image</string>
    <string name="session_description_time_image" translatable="false">time image</string>
    <string name="session_description_header_image" translatable="false">header image</string>
    <string name="session_duration_room_format" translatable="false">%1$d min / %2$s</string>
    <string name="session_filter_button">Filtering</string>
    <string name="session_filter_button_filtered">Filtered</string>
    <string name="session_filter_title">Filter</string>
    <string name="session_title" translatable="false">Sessions</string>
    <string name="session_filter_reset">Reset</string>
    <string name="session_filter_room" translatable="false">Room</string>
    <string name="session_filter_language" translatable="false">Language</string>
    <string name="session_filter_language_support" translatable="false">Language Support</string>
    <string name="session_filter_audience_category" translatable="false">Audience Category</string>
    <string name="session_filter_category" translatable="false">Category</string>
    <string name="session_detail_intended_audience">Intended Audience</string>
    <string name="session_detail_tag" translatable="false">Tags</string>
    <string name="session_detail_survey">Survey</string>
    <string name="session_detail_go_to_survey">Go to survey</string>
    <string name="session_detail_speaker" translatable="false">Speaker</string>
    <string name="session_detail_resource">Resources</string>
    <string name="session_detail_resource_video">Video</string>
    <string name="session_detail_resource_slide">Slides</string>
    <string name="session_detail_share_url">https://droidkaigi.jp/2019/en/timetable/%s</string>
    <string name="session_speaker_sessions" translatable="false">Session</string>
    <string name="session_share" translatable="false">Share</string>
    <string name="session_place" translatable="false">Place</string>
    <string name="session_search_hint">Search…</string>
    <string name="session_go_to_survey">Go to survey</string>
    <string name="session_ongoing" translatable="false">ONGOING</string>
    <string name="session_simultaneous_interpretation">Simultaneous Interpretation</string>
    <string name="session_for_beginners">For Beginners</string>
    <string name="session_bottom_appbar_behavior" translatable="false">io.github.droidkaigi.confsched2019.session.ui.widget.SessionBottomAppBarBehavior</string>
    <string name="session_favorite_empty">Add sessions to your plan\nby tapping the bookmark button.</string>
    <string name="session_favorite_connection_error">Could not register as a favorite. Retry later.</string>
    <string name="session_calendar" translatable="false">Calendar</string>
    <string name="session_lunch" translatable="false">Lunch</string>
</resources>
