<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/filter_coodinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context="io.github.droidkaigi.confsched2019.session.ui.SessionPagesFragment"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="64dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                >

                <TextView
                    android:id="@+id/sessions_filter_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="44dp"
                    android:text="@string/session_filter_title"
                    android:textAppearance="?textAppearanceHeadline5"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@id/sessions_filter_reset"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />


                <com.google.android.material.chip.Chip
                    android:id="@+id/sessions_filter_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/session_filter_reset"
                    android:textAppearance="?textAppearanceSubtitle1"
                    android:textColor="@color/white"
                    app:chipBackgroundColor="#d12016"
                    app:layout_constraintBottom_toBottomOf="@id/sessions_filter_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/sessions_filter_title"
                    />

                <TextView
                    android:id="@+id/sessions_filter_room_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/session_filter_room"
                    android:textAppearance="?textAppearanceSubtitle1"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/sessions_filter_title"
                    app:layout_constraintTop_toBottomOf="@id/sessions_filter_title"
                    />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/sessions_filter_room_chip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/sessions_filter_title"
                    app:layout_constraintTop_toBottomOf="@id/sessions_filter_room_title"
                    />

                <TextView
                    android:id="@+id/sessions_filter_lang_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/session_filter_language"
                    android:textAppearance="?textAppearanceSubtitle1"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/sessions_filter_title"
                    app:layout_constraintTop_toBottomOf="@id/sessions_filter_room_chip"
                    />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/sessions_filter_lang_chip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/sessions_filter_title"
                    app:layout_constraintTop_toBottomOf="@id/sessions_filter_lang_title"
                    />


                <TextView
                    android:id="@+id/sessions_filter_category_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/session_filter_category"
                    android:textAppearance="?textAppearanceSubtitle1"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="@id/sessions_filter_title"
                    app:layout_constraintTop_toBottomOf="@id/sessions_filter_lang_chip"
                    />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/sessions_filter_category_chip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/sessions_filter_title"
                    app:layout_constraintTop_toBottomOf="@id/sessions_filter_category_title"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <FrameLayout
            android:id="@+id/sessions_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginBottom="4dp"
            app:behavior_hideable="false"
            app:behavior_peekHeight="64dp"
            app:behavior_skipCollapsed="false"
            app:layout_behavior="io.github.droidkaigi.confsched2019.widget.BottomSheetBehavior"
            tools:layout="@layout/fragment_bottom_sheet_sessions"
            />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
