<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <import type="android.view.View"/>

        <variable
            name="session"
            type="io.github.droidkaigi.confsched2019.model.Session.SpeechSession"
            />

        <variable
            name="isShowDayNumber"
            type="boolean"
            />

        <variable
            name="searchQuery"
            type="String"
            />

        <variable
            name="simplify"
            type="boolean"
            />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <androidx.emoji.widget.EmojiTextView
                    android:id="@+id/session_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@{session.title}"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.App.Headline5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_goneMarginTop="12dp"
                    tools:text="テストセッション"
                    />

                <TextView
                    android:id="@+id/session_time_and_room"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textAppearance="@style/TextAppearance.App.Subtitle2"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@id/session_title"
                    app:layout_constraintTop_toBottomOf="@id/session_title"
                    tools:text="20min / Hall"
                    />


                <ImageView
                    android:id="@+id/session_time_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/session_description_time_image"
                    android:tint="@color/gray2"
                    app:layout_constraintStart_toStartOf="@id/session_title"
                    app:layout_constraintTop_toBottomOf="@id/session_time_and_room"
                    app:srcCompat="@drawable/ic_access_time_black_24dp"
                    />

                <TextView
                    android:id="@+id/session_start_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textAppearance="@style/TextAppearance.App.Subtitle1"
                    app:layout_constraintBottom_toBottomOf="@id/session_time_image"
                    app:layout_constraintStart_toEndOf="@id/session_time_image"
                    app:layout_constraintTop_toTopOf="@id/session_time_image"
                    tools:text="2月2日 10:20-10:40"
                    />

                <ImageView
                    android:id="@+id/divider1"
                    android:layout_width="0dp"
                    android:layout_height="4dp"
                    android:layout_marginTop="48dp"
                    android:contentDescription="@null"
                    android:layerType="software"
                    android:src="@drawable/shape_dashed_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/session_time_image"
                    />

                <androidx.emoji.widget.EmojiTextView
                    android:id="@+id/session_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:includeFontPadding="false"
                    android:paddingBottom="2dp"
                    android:text="@{session.desc}"
                    android:textAlignment="viewStart"
                    android:visibility="@{simplify ? View.GONE : View.VISIBLE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/session_title"
                    app:layout_constraintTop_toBottomOf="@id/divider1"
                    tools:text="Material is the metaphor A material metaphor is the unifying theory of a rationalized space and a system of motion. The material is grounded in tactile reality, inspired by the study of paper and ink, yet technologically advanced and open to imagination and magic."
                    />


                <ImageView
                    android:id="@+id/divider2"
                    android:layout_width="0dp"
                    android:layout_height="4dp"
                    android:layout_marginTop="28dp"
                    android:contentDescription="@null"
                    android:layerType="software"
                    android:src="@drawable/shape_dashed_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/session_description"
                    />

                <TextView
                    android:id="@+id/session_tag_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/session_detail_tag"
                    android:textAppearance="@style/TextAppearance.App.Subtitle1"
                    app:layout_constraintStart_toStartOf="@id/session_title"
                    app:layout_constraintTop_toBottomOf="@id/divider2"
                    />


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/session_tags"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/session_title"
                    app:layout_constraintTop_toBottomOf="@id/session_tag_title"
                    >

                    <com.google.android.material.chip.Chip
                        android:id="@+id/language_chip"
                        style="@style/Widget.MaterialComponents.Chip.Action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{session.language}"
                        android:textAppearance="?textAppearanceCaption"
                        android:textColor="@color/white"
                        app:chipBackgroundColor="#7982e1"
                        tools:text="Japanese"
                        />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/topic_chip"
                        style="@style/Widget.MaterialComponents.Chip.Action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?textAppearanceCaption"
                        android:textColor="@color/white"
                        app:chipBackgroundColor="#95959c"
                        tools:text="ソフトウェアアーキテクチャ"
                        />
                </com.google.android.material.chip.ChipGroup>

                <ImageView
                    android:id="@+id/divider3"
                    android:layout_width="0dp"
                    android:layout_height="4dp"
                    android:layout_marginTop="24dp"
                    android:contentDescription="@null"
                    android:layerType="software"
                    android:src="@drawable/shape_dashed_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/session_tags"
                    />


                <TextView
                    android:id="@+id/session_survery_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/session_detail_survey"
                    android:textAppearance="@style/TextAppearance.App.Subtitle1"
                    app:layout_constraintStart_toStartOf="@id/session_title"
                    app:layout_constraintTop_toBottomOf="@id/divider3"
                    />

                <ImageView
                    android:id="@+id/divider4"
                    android:layout_width="0dp"
                    android:layout_height="4dp"
                    android:layout_marginTop="28dp"
                    android:contentDescription="@null"
                    android:layerType="software"
                    android:src="@drawable/shape_dashed_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/session_survery_title"
                    />

                <TextView
                    android:id="@+id/session_speaker_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/session_detail_speaker"
                    android:textAppearance="@style/TextAppearance.App.Subtitle1"
                    app:layout_constraintStart_toStartOf="@id/session_title"
                    app:layout_constraintTop_toBottomOf="@id/divider4"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/session_speakers"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/session_speaker_title"
                    />

                <androidx.emoji.widget.EmojiTextView
                    android:id="@+id/session_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="14dp"
                    android:ellipsize="end"
                    android:includeFontPadding="false"
                    android:maxLines="3"
                    android:paddingBottom="2dp"
                    android:textAlignment="viewStart"
                    android:visibility="@{session.message == null ? View.GONE : View.VISIBLE}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/session_title"
                    app:layout_constraintTop_toBottomOf="@id/session_speakers"
                    />


                <ImageView
                    android:id="@+id/session_favorite"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:background="@{session.isFavorited ? @color/white : @android:color/black}"
                    android:contentDescription="@string/session_description_favorite_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
